fix bug on mobile devices

--- a/css/main.css
+++ b/css/main.css
@@ -250,6 +250,7 @@ p {
 
 .contact {
     height: 505px;
+    width: 100%;
 }
 
 .legal {
